package models;

/**
 * Enumeration representing different game modes for the MasterMind game.
 */
public enum GameMode {
    CLASSIC,
    EASY,
    NUMERIC
}