package models;

public enum PawnColor {
    RED,
    GREEN,
    BLUE,
    YELLOW,
    ORANGE,
    PINK,
    LIGHT_GRAY,
    MAGENTA
}