@startuml

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods
hide interface attributes

package views {
    class MenuWindow {}
    class GameWindow {}
    class EndWindow {}
}

package controllers {
    class MenuController {}
    class GameController {}
    class EndController {}
}

package models {
<<<<<<< HEAD
    'class MasterMind {}
    class Game {
       ' - _nbRounds: Integer
       ' - _currentRoundNb: Integer
        - nbAttemptsRouds : Integer
        t nbColorsInCombinationRounds : Integer
=======
    class Game {
        - _NBROUNDSMAX: Integer
>>>>>>> 3bb161a (Post rendu 1, code non cohérent avec UML)
        + Game(nbRounds: Integer)
        + nextRound(nbAttempts: Integer, nbColorsInCombination: Integer, gameMode: GameMode)
        - isGameOver(): Boolean
        - createNextRound(nbAttempts: Integer, nbColorsInCombination: Integer, gameMode: GameMode)
        + getCurrentRound(): Round
        + getCurrentRoundNb(): Integer
        - endGame()
        + calculateScoreGame(): Integer
    }
    class Round {
<<<<<<< HEAD
        + Round(nbAttempts: Integer, nbColorsInCombination: Integer)
        + setObserver(observer: RoundObserver)
        '- notifyWinRound()
        '- notifyLoseRound(score: Integer)
        '- notifyForfeitRound()
        - nextAttempt(combination: Combination, clues : Clue[])
=======
        - _NBATTEMPTS: Integer
        + Round(nbAttempts: Integer, nbColorsInCombination: Integer, gameMode: GameMode)
        - nextAttempt()
>>>>>>> 3bb161a (Post rendu 1, code non cohérent avec UML)
        - isRoundOver(): Boolean
        + submitCombination(combination: Combination)
        + getCurrentAttempt(): Attempt
        + getCurrentAttemptNb(): Integer
        - endRound()
        + calculateScoreRound(): Integer
    }
    class Combination {
        - _NBCOLORSINCOMBINATION: Integer
        # Combination()
        + Combination(nbColorsInCombination: Integer)
        + getNbColorsInCombination(): Integer
        + setPawns(pawns: PawnColor[])
        + getPawns(): PawnColor[]
    }
    class Solution extends Combination {
        + Solution(nbColorsInCombination: Integer)
        + generateSolution()
        + compareWithCombination(combination: Combination): Clue[]
        + isInSolution(pawnColor: PawnColor): Boolean
        + isSolutionFound(clues : Clue[]): Boolean
        + sortClues(clues: Clue[]): Clue[]
    }
<<<<<<< HEAD
    class Attempt
    {
        + Attempt(combination: Combination, clues : Clue[])
        + getCombination() : Combination
        + getClues() :  Clue[]
    }
    /'
    class GenerateCluesFactory {
        + createClassic(): GenerateCluesStrategy
        + createEasy(): GenerateCluesStrategy
=======
    class Attempt {
        + Attempt(combinationSubmitted: Combination, clues : Clue[])
        + getCombinationSubmitted(): Combination
        + getClues(): Clue[]
        + calculateScoreAttempt(): Integer
>>>>>>> 3bb161a (Post rendu 1, code non cohérent avec UML)
    }

    enum PawnColor <<enum>> {
        RED
        GREEN
        BLUE
        YELLOW
        ORANGE
        PINK
        LIGHT_GRAY
        MAGENTA
    }
    enum GameMode <<enum>> {
        CLASSIC
        EASY
        NUMERIC
    }
    enum Clue <<enum>> {
        WELL_PLACED
        MISPLACED
        WRONG
    }
}

'Relations

'Views

'MenuWindow
MenuWindow ..> MenuController : > <<selects>>

'GameWindow
GameWindow ..> GameController : > <<selects>>

'EndWindow
EndWindow ..> EndController : > <<selects>>

'Controllers

'GameController
GameController o--> "1\n- _game" Game : > <<handles>>

'Models

'Game
<<<<<<< HEAD
Game o--> "*\n- _rounds" Round : > <<owns>>
Game ..> GameMode : > <<uses>>

'Round
Round *--> "1\n- _solution" Solution : > <<owns>>
'Relation avec observer dans la partie GameObserver
Round *--> "*\n- _attempt" Attempt : > <<owns>>
Round *--> "1\n- _gameMode" GameMode : > <<owns>>
=======
Game *--> "3..5\n- _rounds" Round : > <<owns>>
Game ..> GameMode : > <<uses>>

'Round
Round *--> "1\n- _SOLUTION" Solution : > <<owns>>
Round *--> "10..12\n- _attempts" Attempt : > <<owns>>
Round *--> "1\n- _GAMEMODE" GameMode : > <<owns>>
Round ..> Combination : > <<uses>>
Round ..> Clue : > <<uses>>
>>>>>>> 3bb161a (Post rendu 1, code non cohérent avec UML)

'Combination
Combination o--> "4..6\n # _PAWNS" PawnColor : > <<contains>>

'Solution
Solution ..> PawnColor : > <<uses>>
Solution ..> Clue : > <<uses>>
Solution ..> Combination : > <<uses>>

Attempt *--> "*\n- _clues" Clue : > <<owns>>
Attempt *--> "1\n _combination" Combination : > <<owns>>

MasterMindApp *--> "1\n _game" Game : > <<owns>>

'Attempt
Attempt *--> "1\n- _COMBINATION_SUBMITTED" Combination : > <<owns>>
Attempt *--> "1\n- _CLUES" Clue : > <<owns>>

@enduml

'Modif rapport : dire que y'a pas de code, pas possible de changer de GameMode en cours de manche à cause du calcul du score
